--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,12 +8,8 @@ head
     link(rel='stylesheet' href='/css/fontawesome-min.css')
     link(href='/css/style.css' rel="stylesheet")
     block styleBlock
-    title MagDesign &mdash; Free Bootstrap 5 Website Template by Colorlib
-    script(type='text/javascript' src='https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=JUFyHUdTl2HRn34LlvRfYNrKbV_aPxVk9OxFcOX4dRbH4rXGyFi6R7Y70lab7GXvVhaxCSmKXTvTzDfYLqzgQ24H9jhUB7OSHIofrsNX5j8' charset='UTF-8')
-    script.
-        (function(w,d){!function(e,t,r,a,s){e[r]=e[r]||{},e[r].executed=[],e.zaraz={deferred:[]};var n=t.getElementsByTagName("title")[0];e[r].c=t.cookie,n&&(e[r].t=t.getElementsByTagName("title")[0].text),e[r].w=e.screen.width,e[r].h=e.screen.height,e[r].j=e.innerHeight,e[r].e=e.innerWidth,e[r].l=e.location.href,e[r].r=t.referrer,e[r].k=e.screen.colorDepth,e[r].n=t.characterSet,e[r].o=(new Date).getTimezoneOffset(),//
-        e[s]=e[s]||[],e.zaraz._preTrack=[],e.zaraz.track=(t,r)=>e.zaraz._preTrack.push([t,r]),e[s].push({"zaraz.start":(new Date).getTime()});var i=t.getElementsByTagName(a)[0],o=t.createElement(a);o.defer=!0,o.src="/cdn-cgi/zaraz/s.js?"+new URLSearchParams(e[r]).toString(),i.parentNode.insertBefore(o,i)}(w,d,"zarazData","script","dataLayer");})(window,document);
-.site-mobile-menu.site-navbar-target
+    title Police Tracker
+    .site-mobile-menu.site-navbar-target
     .site-mobile-menu-header
         .site-mobile-menu-close
             span.icofont-close.js-menu-toggle
