--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
                                     .post-entry.d-lg-flex
                                         .me-lg-5.thumbnail.mb-4.mb-lg-0
                                             a(href=`/cases/${_case.id}/${url_path}`)
-                                                img.img-fluid(src='images/xpost_lg_2.jpg.pagespeed.ic.t0aph6N0mC.webp' alt='Image' data-pagespeed-url-hash='1399666466' onload='pagespeed.CriticalImages.checkImageForCriticality(this);')
+                                                img.img-fluid(src='/images/xpost_lg_2.jpg.pagespeed.ic.t0aph6N0mC.webp' alt='Image')
                                         .content.align-self-center
                                             .post-meta.mb-3
                                                 a.category(href='#')= _case.Agency.abbr
@@ -44,7 +44,7 @@ block content
                         - const url_path = recent.title.split(' ').join('-')
                         .post-entry.d-md-flex.small-horizontal.mb-5
                             .me-md-5.thumbnail.mb-3.mb-md-0
-                                img.img-fluid(src='/images/ximg_2.jpg.pagespeed.ic.fbbBEgB1Q6.webp' alt='Image' data-pagespeed-url-hash='3151298507' onload='pagespeed.CriticalImages.checkImageForCriticality(this);')
+                                img.img-fluid(src='/images/ximg_2.jpg.pagespeed.ic.fbbBEgB1Q6.webp' alt='Image')
                             .content
                                 .post-meta.mb-3
                                     a.category(href='#')= recent.Agency.abbr
