--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,117 +9,123 @@ head
     link(href='/css/style.css' rel="stylesheet")
     block styleBlock
     title Police Tracker
+body
     .site-mobile-menu.site-navbar-target
-    .site-mobile-menu-header
-        .site-mobile-menu-close
-            span.icofont-close.js-menu-toggle
-    .site-mobile-menu-body
-nav.site-nav
-    .container
-        .site-navigation
+        .site-mobile-menu-header
+            .site-mobile-menu-close
+                span.icofont-close.js-menu-toggle
+        .site-mobile-menu-body
+    nav.site-nav
+        .container
+            .site-navigation
+                .row
+                    .col-md-6.text-center.order-1.order-md-2.mb-3.mb-md-0
+                        a.logo.m-0(href='/') PoliceTrackr
+                    .col-md-3.order-3.order-md-1
+                        form.search-form(action='#')
+                            i.icon-sh.fa.fa-search
+                            input.form-control(type='search' placeholder='Search...')
+                    .col-md-3.text-end.order-2.order-md-3.mb-3.mb-md-0
+                        .d-flex
+                            ul.list-unstyled.social.me-auto
+                                li
+                                    a(href='#')
+                                        i.fa.fa-twitter
+                                li
+                                    a(href='#')
+                                        i.fa.fa-facebook
+                            a.d-none.burger.ms-auto.float-end.site-menu-toggle.js-menu-toggle.d-inline-block(href='#' data-toggle='collapse' data-target='#main-navbar')
+                                span
+                ul.js-clone-nav.d-none.d-lg-inline-none.text-start.site-menu.float-end
+                    li.active
+                        a(href='/') Home
+                    li.has-children
+                        a(href='categories.html') Categories
+                        ul.dropdown
+                            li
+                                a(href='#') Travel
+                            li
+                                a(href='#') Food
+                            li
+                                a(href='#') Technology
+                            li
+                                a(href='#') Business
+                            li.has-children
+                                a(href='#') Dropdown
+                                ul.dropdown
+                                    li
+                                        a(href='#') Sub Menu One
+                                    li
+                                        a(href='#') Sub Menu Two
+                                    li
+                                        a(href='#') Sub Menu Three
+                    li
+                        a(href='#') Travel
+                    li
+                        a(href='#') Food
+                    li
+                        a(href='#') Technology
+                    li
+                        a(href='#') Business
+
+    block content
+
+
+    .py-5.bg-light.mx-md-3.sec-subscribe
+        .container
             .row
-                .col-md-6.text-center.order-1.order-md-2.mb-3.mb-md-0
-                    a.logo.m-0(href='/') PoliceTrackr
-                .col-md-3.order-3.order-md-1
-                    form.search-form(action='#')
-                        i.icon-sh.fa.fa-search
-                        input.form-control(type='search' placeholder='Search...')
-                .col-md-3.text-end.order-2.order-md-3.mb-3.mb-md-0
-                    .d-flex
-                        ul.list-unstyled.social.me-auto
+                .col-lg-12
+                    h2.h4.fw-bold Subscribe to newsletter
+            form.row(action='')
+                .col-md-8
+                    .mb-3.mb-md-0
+                        input.form-control(type='email' placeholder='Enter your email')
+                .col-md-4.d-grid
+                    input.btn.btn-primary(type='submit' value='Subscribe')
+    .site-footer
+        .container
+            .row.justify-content-center.copyright
+                .col-lg-7.text-center
+                    .widget
+                        ul.social.list-unstyled
+                            li(style="margin-right: 6px")
+                                a(href='#')
+                                    span.fa.fa-facebook
                             li
                                 a(href='#')
-                                    i.fa.fa-twitter
-                            li
-                                a(href='#')
-                                    i.fa.fa-facebook
-                        a.d-none.burger.ms-auto.float-end.site-menu-toggle.js-menu-toggle.d-inline-block(href='#' data-toggle='collapse' data-target='#main-navbar')
-                            span
-            ul.js-clone-nav.d-none.d-lg-inline-none.text-start.site-menu.float-end
-                li.active
-                    a(href='/') Home
-                li.has-children
-                    a(href='categories.html') Categories
-                    ul.dropdown
-                        li
-                            a(href='#') Travel
-                        li
-                            a(href='#') Food
-                        li
-                            a(href='#') Technology
-                        li
-                            a(href='#') Business
-                        li.has-children
-                            a(href='#') Dropdown
-                            ul.dropdown
-                                li
-                                    a(href='#') Sub Menu One
-                                li
-                                    a(href='#') Sub Menu Two
-                                li
-                                    a(href='#') Sub Menu Three
-                li
-                    a(href='#') Travel
-                li
-                    a(href='#') Food
-                li
-                    a(href='#') Technology
-                li
-                    a(href='#') Business
+                                    span.fa.fa-twitter
+                    .widget
+                        p
+                            | Copyright &copy;
+                            script.
+                                document.write(new Date().getFullYear());
+                            |  All rights reserved 
+                        .d-block
+                            a.m-2(href='#') Terms &amp; Conditions
+                            | /
+                            a.m-2(href='#') Privacy Policy
 
-block content
-
-
-.py-5.bg-light.mx-md-3.sec-subscribe
-    .container
-        .row
-            .col-lg-12
-                h2.h4.fw-bold Subscribe to newsletter
-        form.row(action='')
-            .col-md-8
-                .mb-3.mb-md-0
-                    input.form-control(type='email' placeholder='Enter your email')
-            .col-md-4.d-grid
-                input.btn.btn-primary(type='submit' value='Subscribe')
-.site-footer
-    .container
-        .row.justify-content-center.copyright
-            .col-lg-7.text-center
-                .widget
-                    ul.social.list-unstyled
-                        li(style="margin-right: 6px")
-                            a(href='#')
-                                span.fa.fa-facebook
-                        li
-                            a(href='#')
-                                span.fa.fa-twitter
-                .widget
-                    p
-                        | Copyright &copy;
-                        script.
-                            document.write(new Date().getFullYear());
-                        |  All rights reserved 
-                    .d-block
-                        a.m-2(href='#') Terms &amp; Conditions
-                        | /
-                        a.m-2(href='#') Privacy Policy
-    #overlayer
-    .loader
-        .spinner-border(role='status')
-            span.visually-hidden Loading...
     script(src='/js/bootstrap-bundle.min.js')
     script(src='/js/tiny-slider.js')
-    script(src='/js/theme.js')
     script.
-        eval(mod_pagespeed_KpCH1a$C_m);
-    script.
-        eval(mod_pagespeed_Ej3jj9tqUo);
-    script.
-        eval(mod_pagespeed_Pkx$Oz4Gi9);
-    script.
-        eval(mod_pagespeed_9lpIcAXJZV);
-    script.
-        eval(mod_pagespeed_GIrE68D1a2);
+        var slider = tns({
+            container: '.posts-slide',
+            controls: false,
+            speed: 600,
+            autoplay: true,
+            autoplayButtonOutput: false
+        });
+    //- script(src='/js/theme.js')
+    //- script.
+    //-     eval(mod_pagespeed_KpCH1a$C_m);
+    //- script.
+    //-     eval(mod_pagespeed_Ej3jj9tqUo);
+    //- script.
+    //-     eval(mod_pagespeed_Pkx$Oz4Gi9);
+    //- script.
+    //-     eval(mod_pagespeed_9lpIcAXJZV);
+    //- script.
+    //-     eval(mod_pagespeed_GIrE68D1a2);
 //-   script(async='' src='https://www.googletagmanager.com/gtag/js?id=UA-23581568-13')
 //-   script.
 //-     window.dataLayer = window.dataLayer || [];
