--- a/views/admin/new-case.pug
+++ b/views/admin/new-case.pug
@@ -47,7 +47,7 @@ block content
                         .row 
                             .col-md-12 
                                 label Evidences (Photos, videos, etc.) 
-                                input.form-control.input.lg(type="file" name="evidences")
+                                input.form-control.input.lg(type="file" name="evidences" multiple)
                     .mb-3.text-center 
                         br/
                         input.btn.btn-success.btn-lg(type="submit" value="Publish Case")
