--- a/views/case.pug
+++ b/views/case.pug
@@ -10,7 +10,7 @@ block content
                     span.date.d-block.text-center.small.text-uppercase.text-black-50.mb-4 #{view.formatDate(_case.event_date)}
                     h2.heading.mb-3.text-center #{_case.title}
 
-                    img.img-fluid.rounded.mb-4(src='/images/ximg_2.jpg.pagespeed.ic.fbbBEgB1Q6.webp' alt='Image')
+                    img.img-fluid.rounded.mb-4(src='/images/police-brutality-md.jpg' alt='Image')
                     p.text-start(style="white-space: pre-wrap") #{_case.description}
 
                     .row.mt-5.pt-5.border-top.text-start
