--- a/views/admin/edit-case.pug
+++ b/views/admin/edit-case.pug
@@ -38,6 +38,18 @@ block content
                                         else 
                                             option(value=`${category.id}`)= category.name
 
+                    .mb-3 
+                        .row 
+                            .col-md-6
+                                label Victim's Gender
+                                select.form-control.input-lg(name="gender")   
+                                    option(value="") -- Select Gender --
+                                    option(value="Female") Female 
+                                    option(value="Male") Male
+                            .col-md-6 
+                                label Victim's Age 
+                                input.form-control(type="text" name="age" value=`${_case.age}`)
+
 
                     .mb-3 
                         .row 
@@ -59,6 +71,16 @@ block content
                                             option(value=`${status}` selected)= status 
                                         else
                                             option(value=`${status}`)= status
+                    .mb-3 
+                        .row 
+                            .col-md-12      
+                                label Event Location 
+                                input.form-control(type="text" name="location" placeholder="Eg. Lagos, Festac town" value=`${_case.location}` required)
+                    .mb-3 
+                        .row 
+                            .col-md-12 
+                                label Media/news link
+                                input.form-control.input-lg(type="text" name="news_link" value=`${_case.news_link}`)
                     .mb-3 
                         .row 
                             .col-md-12 
