--- a/views/admin/layout.pug
+++ b/views/admin/layout.pug
@@ -7,7 +7,7 @@ head
     meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport')
     link(rel='stylesheet' href='/css/bootstrap.min.css')
     // Font Awesome
-    link(rel='stylesheet' href='/css/font-awesome.min.css')
+    link(rel='stylesheet' href='/css/fontawesome-min.css')
     //if lt IE 9
         script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
         script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
