Add search feature

--- a/views/case.pug
+++ b/views/case.pug
@@ -18,13 +18,13 @@ block content
                         p #[strong News link:] 
                             a(href=`${_case.news_link}` target="_blank")= _case.news_link
 
-                    .row.mt-5.pt-5.border-top.text-start
-                        .col-12
-                            span.fw-bold.text-black.small.mb-1 Share
-                            ul.social.list-unstyled
-                                li
-                                    a(href='#')
-                                        i.fa.fa-facebook
-                                li
-                                    a(href='#')
-                                        i.fa.fa-twitter
+                    //- .row.mt-5.pt-5.border-top.text-start
+                    //-     .col-12
+                    //-         span.fw-bold.text-black.small.mb-1 Share
+                    //-         ul.social.list-unstyled
+                    //-             li
+                    //-                 a(href='#')
+                    //-                     i.fa.fa-facebook
+                    //-             li
+                    //-                 a(href='#')
+                    //-                     i.fa.fa-twitter
