--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,9 +21,9 @@ body
                     .col-md-6.text-center.order-1.order-md-2.mb-3.mb-md-0
                         a.logo.m-0(href='/') PoliceTrackr
                     .col-md-3.order-3.order-md-1
-                        form.search-form(action='#')
+                        form.search-form(action='/search')
                             i.icon-sh.fa.fa-search
-                            input.form-control(type='search' placeholder='Search...')
+                            input.form-control(type='search' name="keywords" placeholder='Search...')
                     .col-md-3.text-end.order-2.order-md-3.mb-3.mb-md-0
                         .d-flex
                             ul.list-unstyled.social.me-auto
