--- a/views/login.pug
+++ b/views/login.pug
@@ -62,11 +62,11 @@ head
         }
 
 main.form-signin.text-center
-    form(method="post" action="/admin/login")
+    form(method="post" action="/users/login")
         h1.h3.mb-3.fw-normal Please sign in
         .form-floating
-            input#floatingInput.form-control(type='email' name="email" placeholder='name@example.com')
-            label(for='floatingInput') Email address
+            input#floatingInput.form-control(type='text' name="email" placeholder='name@example.com')
+            label(for='floatingInput') Username address
         .form-floating
             input#floatingPassword.form-control(type='password' name="password" placeholder='Password')
             label(for='floatingPassword') Password
