--- a/views/user/users.pug
+++ b/views/user/users.pug
@@ -34,14 +34,19 @@ block content
                 .modal-header
                     h5#staticBackdropLabel.modal-title Create User
                     button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
-                form(method="post" action="/admin/create")
+                form(method="post" action="/users/create")
                     .modal-body
                         .mb-3
                             input.form-control(type="text" name="fullname" placeholder="Full name" aria-label="Full name" required=true)
                         .mb-3
-                            input.form-control(type="email" name="email" placeholder="Email" aria-label="Email" required=true)
+                            //- input.form-control(type="email" name="email" placeholder="Email" aria-label="Email" required=true)
+                            input.form-control(type="text" name="username" placeholder="Username" aria-label="Username" required=true)
                         .mb-3
-                            input.form-control(type="text" name="phone" placeholder="Phone" aria-label="Phone" required=true)
+                            //- input.form-control(type="text" name="phone" placeholder="Phone" aria-label="Phone")
+                            select.form-control(name="role")
+                                option(value="") -- Select Role --
+                                option(value="ward") Ward Agent 
+                                option(value="pu") Polling Unit Agent
                         .mb-3 
                             input.form-control(type="password" name="password" placeholder="Password" required=true)
                         .mb-3 
