--- a/views/user/new-pu.pug
+++ b/views/user/new-pu.pug
@@ -23,10 +23,10 @@ block content
                         .row 
                             .col-md-6
                                 label Total Accredited Voters
-                                input.form-control(type="text" name="total_accredited_voters" required)
+                                input.form-control(type="text" name="total_accredited_voters" value=`${pu.total_accredited_voters}` required)
                             .col-md-6 
                                 label Total Valid Votes 
-                                input.form-control(type="text" name="total_valid_votes" required)
+                                input.form-control(type="text" name="total_valid_votes" value=`${pu.total_valid_votes}` required)
 
 
                     .mb-3 
@@ -34,25 +34,25 @@ block content
                             .col-md-6
                                 label APC
                             .col-md-6 
-                                input.form-control(type="text" name="apc" required)
+                                input.form-control(type="text" name="apc" value=`${pu.vote.apc}` required)
 
                         .row 
                             .col-md-6
                                 label APGA
                             .col-md-6 
-                                input.form-control(type="text" name="apga" required)
+                                input.form-control(type="text" name="apga"  value=`${pu.vote.apga}` required)
 
                         .row 
                             .col-md-6
                                 label LP
                             .col-md-6 
-                                input.form-control(type="text" name="lp" required)
+                                input.form-control(type="text" name="lp" value=`${pu.vote.lp}` required)
 
                         .row 
                             .col-md-6
                                 label PDP
                             .col-md-6 
-                                input.form-control(type="text" name="pdp" required)
+                                input.form-control(type="text" name="pdp" value=`${pu.vote.pdp}` required)
 
                     .mb-3 
                         .row 
