--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ head
     link(href='/css/style.css' rel="stylesheet")
     link(rel='stylesheet' href='/css/bootstrap.min.css')
     block styleBlock
-    title Police Tracker
+    title LP Situation Room
 body
     .site-mobile-menu.site-navbar-target
         .site-mobile-menu-header
@@ -37,33 +37,7 @@ body
                     li.active
                         a(href='/') Home
                     li.has-children
-                        a(href='categories.html') Categories
-                        ul.dropdown
-                            li
-                                a(href='#') Travel
-                            li
-                                a(href='#') Food
-                            li
-                                a(href='#') Technology
-                            li
-                                a(href='#') Business
-                            li.has-children
-                                a(href='#') Dropdown
-                                ul.dropdown
-                                    li
-                                        a(href='#') Sub Menu One
-                                    li
-                                        a(href='#') Sub Menu Two
-                                    li
-                                        a(href='#') Sub Menu Three
-                    li
-                        a(href='#') Travel
-                    li
-                        a(href='#') Food
-                    li
-                        a(href='#') Technology
-                    li
-                        a(href='#') Business
+
 
     block content
 
