--- a/views/user/new-ward.pug
+++ b/views/user/new-ward.pug
@@ -13,13 +13,13 @@ block content
                 br/
                 form#ward-form(method="post" action="/ward/new" encType="multipart/form-data")
                     .mb-3 
-                        .row 
-                            .col-md-6
-                                label Total Accredited Votes
-                                input.form-control(type="text" name="" value="87,000" readonly)
-                            .col-md-6 
-                                label Total Valid Votes 
-                                input.form-control(type="text" name="" value="47,000" readonly)
+                        //- .row 
+                        //-     .col-md-6
+                        //-         label Total Accredited Votes
+                        //-         input.form-control(type="text" name="" value="87,000" readonly)
+                        //-     .col-md-6 
+                        //-         label Total Valid Votes 
+                        //-         input.form-control(type="text" name="" value="47,000" readonly)
                     table.table.table-striped.mt-5#pu-table
                         head 
                             tr 
